==> kentahikaru/NetClock/lib/Driver/BSP/STM32746G-Discovery_SPL/stm32746g_discovery.c <==
#include "stm32746g_discovery.h"
#define __STM32746G_DISCO_BSP_VERSION_MAIN   (0x01) /*!< [31:24] main version */
#define __STM32746G_DISCO_BSP_VERSION_SUB1   (0x00) /*!< [23:16] sub1 version */
#define __STM32746G_DISCO_BSP_VERSION_SUB2   (0x00) /*!< [15:8]  sub2 version */
#define __STM32746G_DISCO_BSP_VERSION_RC     (0x00) /*!< [7:0]  release candidate */
#define __STM32746G_DISCO_BSP_VERSION         ((__STM32746G_DISCO_BSP_VERSION_MAIN << 24)\
                                             |(__STM32746G_DISCO_BSP_VERSION_SUB1 << 16)\
                                             |(__STM32746G_DISCO_BSP_VERSION_SUB2 << 8 )\
                                             |(__STM32746G_DISCO_BSP_VERSION_RC))
#define I2C_REGADDR_SIZE_8BIT           1
#define I2C_REGADDR_SIZE_16BIT          2

void BSP_LED_Init(Led_TypeDef Led)
{
  GPIO_InitTypeDef  GPIO_InitStructure;
  GPIO_TypeDef*     gpio_led;

  if (Led == LED1)
  {
    gpio_led = LED1_GPIO_PORT;
    /* Enable the GPIO_LED clock */
    LED1_GPIO_CLK_ENABLE();

    /* Configure the GPIO_LED pin */
    GPIO_InitStructure.GPIO_Pin = GPIO_PIN[Led];
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
    GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_UP;
    GPIO_InitStructure.GPIO_Speed = GPIO_Fast_Speed;
  
    GPIO_Init(gpio_led, &GPIO_InitStructure);
    
    /* By default, turn off LED */
    GPIO_WriteBit(gpio_led, GPIO_PIN[Led], Bit_RESET);
  }
}

void BSP_LED_DeInit(Led_TypeDef Led)
{
  GPIO_InitTypeDef  GPIO_InitStructure;
  GPIO_TypeDef*     gpio_led;

  if (Led == LED1)
  {
    gpio_led = LED1_GPIO_PORT;
    
    /* Turn off LED */
    GPIO_WriteBit(gpio_led, GPIO_PIN[Led], Bit_RESET);
    
    /* Configure the GPIO_LED pin */
    GPIO_InitStructure.GPIO_Pin = GPIO_PIN[Led];
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_OD;
    GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_NOPULL;
    GPIO_InitStructure.GPIO_Speed = GPIO_Low_Speed;
    
    GPIO_Init(gpio_led, &GPIO_InitStructure);
  }
}

void BSP_LED_On(Led_TypeDef Led)
{
  GPIO_TypeDef*     gpio_led;

  if (Led == LED1)	/* Switch On LED connected to GPIO */
  {
    gpio_led = LED1_GPIO_PORT;
    GPIO_WriteBit(gpio_led, GPIO_PIN[Led], Bit_SET);
  }
}

void BSP_LED_Off(Led_TypeDef Led)
{
  GPIO_TypeDef*     gpio_led;

  if (Led == LED1) /* Switch Off LED connected to GPIO */
  {
    gpio_led = LED1_GPIO_PORT;
    GPIO_WriteBit(gpio_led, GPIO_PIN[Led], Bit_RESET);
  }
}

void BSP_LED_Toggle(Led_TypeDef Led)
{
  GPIO_TypeDef*     gpio_led;

  if (Led == LED1)	/* Toggle LED connected to GPIO */
  {
    gpio_led = LED1_GPIO_PORT;
    GPIO_ToggleBits(gpio_led, GPIO_PIN[Led]);
  }
}

void BSP_PB_Init(Button_TypeDef Button, ButtonMode_TypeDef ButtonMode)
{
  GPIO_InitTypeDef GPIO_InitStructure;
  EXTI_InitTypeDef EXTI_InitStructure;
  NVIC_InitTypeDef NVIC_InitStructure;
  
  /* Enable the BUTTON clock */
  BUTTONx_GPIO_CLK_ENABLE(Button);
  
  /* Configure Button pin as input */
  GPIO_InitStructure.GPIO_Pin = BUTTON_PIN[Button];
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN;
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_NOPULL;
  GPIO_InitStructure.GPIO_Speed = GPIO_Fast_Speed;
  
  GPIO_Init(BUTTON_PORT[Button], &GPIO_InitStructure);
  
  if(ButtonMode == BUTTON_MODE_EXTI)
  {
    /* Enable SYSCFG clock */
    RCC_APB2PeriphClockCmd(RCC_APB2Periph_SYSCFG, ENABLE);
    
    /* Connect Button EXTI Line to Button GPIO Pin */
    SYSCFG_EXTILineConfig(BUTTON_PORT_SOURCE[Button], BUTTON_PIN_SOURCE[Button]);    
    
    /* Configure Button EXTI line */
    EXTI_InitStructure.EXTI_Line = BUTTON_EXTI_LINE[Button];
    EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;
    EXTI_InitStructure.EXTI_LineCmd = ENABLE;
    
    if(Button != BUTTON_WAKEUP)
    {
      EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Falling; 
    }
    else
    {
      EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Rising;  
    }
    
    EXTI_Init(&EXTI_InitStructure);
    
    /* Enable and set Button EXTI Interrupt to the lowest priority */
    NVIC_InitStructure.NVIC_IRQChannel = BUTTON_IRQn[Button];
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0x0F;
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0x00;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;

    NVIC_Init(&NVIC_InitStructure); 
  }
}

void BSP_PB_DeInit(Button_TypeDef Button)
{
  GPIO_InitTypeDef GPIO_InitStructure;
  EXTI_InitTypeDef EXTI_InitStructure;
  NVIC_InitTypeDef NVIC_InitStructure;
  
  GPIO_InitStructure.GPIO_Pin = BUTTON_PIN[Button];
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN;
  GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_NOPULL;
  GPIO_InitStructure.GPIO_Speed = GPIO_Low_Speed;
  
  /* Disable Button EXTI Interrupt and NVIC */
  EXTI_InitStructure.EXTI_Line = BUTTON_EXTI_LINE[Button];
  EXTI_InitStructure.EXTI_LineCmd = DISABLE;
  EXTI_Init(&EXTI_InitStructure);
  
  NVIC_InitStructure.NVIC_IRQChannel = BUTTON_IRQn[Button];
  NVIC_InitStructure.NVIC_IRQChannelCmd = DISABLE;
  NVIC_Init(&NVIC_InitStructure); 
  
  GPIO_Init(BUTTON_PORT[Button], &GPIO_InitStructure);
}

uint32_t BSP_PB_GetState(Button_TypeDef Button)
{
  return GPIO_ReadInputDataBit(BUTTON_PORT[Button], BUTTON_PIN[Button]);
}

void BSP_COM_Init(COM_TypeDef COM, USART_InitTypeDef * USART_InitStruct)
{
  GPIO_InitTypeDef GPIO_InitStructure;

  /* Enable GPIO clock */
  DISCOVERY_COMx_TX_GPIO_CLK_ENABLE(COM);
  DISCOVERY_COMx_RX_GPIO_CLK_ENABLE(COM);

  /* Enable USART clock */
  DISCOVERY_COMx_CLK_ENABLE(COM);

  /* Configure USART Tx as alternate function */
  GPIO_InitStructure.GPIO_Pin = COM_TX_PIN[COM];
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
  GPIO_InitStructure.GPIO_Speed = GPIO_Fast_Speed;
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
  GPIO_Init(COM_TX_PORT[COM], &GPIO_InitStructure);

  /* Configure USART Rx as alternate function */
  GPIO_InitStructure.GPIO_Pin = COM_RX_PIN[COM];
  GPIO_Init(COM_RX_PORT[COM], &GPIO_InitStructure);

  /* Connect COM_TX_PIN to UART_TX*/
  GPIO_PinAFConfig(COM_TX_PORT[COM],
                   COM_TX_PIN_SOURCE[COM],
                   COM_TX_AF[COM]);
  
  /* Connect COM_RX_PIN to UART_RX*/
  GPIO_PinAFConfig(COM_RX_PORT[COM],
                   COM_RX_PIN_SOURCE[COM],
                   COM_RX_AF[COM]);
  
  /* USART configuration */
  USART_Init(COM_USART[COM], USART_InitStruct);
  
  /* Enable USART */
  USART_Cmd(COM_USART[COM], ENABLE);
}

static void I2Cx_MspInit(I2C_TypeDef *i2c_handler)
{
  GPIO_InitTypeDef  GPIO_InitStructure;
  NVIC_InitTypeDef NVIC_InitStructure;
  
  if (i2c_handler == DISCOVERY_AUDIO_I2Cx)
  {
    /* AUDIO and LCD I2C MSP init */

    /*** Configure the GPIOs ***/
    /* Enable GPIO clock */
    DISCOVERY_AUDIO_I2Cx_SCL_ENABLE();
    DISCOVERY_AUDIO_I2Cx_SDA_ENABLE();
    
    /* Connect PXx to I2C_SCL*/
    GPIO_PinAFConfig(DISCOVERY_AUDIO_I2Cx_SCL_GPIO_PORT,
                     DISCOVERY_AUDIO_I2Cx_SCL_PIN_SOURCE,
                     DISCOVERY_AUDIO_I2Cx_SCL_AF);
    
    /* Connect PXx to I2C_SDA*/
    GPIO_PinAFConfig(DISCOVERY_AUDIO_I2Cx_SDA_GPIO_PORT,
                     DISCOVERY_AUDIO_I2Cx_SDA_PIN_SOURCE,
                     DISCOVERY_AUDIO_I2Cx_SDA_AF); 
  
    /* Configure I2C Tx as alternate function */
    GPIO_InitStructure.GPIO_Pin = DISCOVERY_AUDIO_I2Cx_SCL_PIN;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
    GPIO_InitStructure.GPIO_Speed = GPIO_Fast_Speed;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_OD;
    GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_NOPULL;
    GPIO_Init(DISCOVERY_AUDIO_I2Cx_SCL_GPIO_PORT, &GPIO_InitStructure);

    /* Configure I2C Rx as alternate function */
    GPIO_InitStructure.GPIO_Pin = DISCOVERY_AUDIO_I2Cx_SDA_PIN;
    GPIO_Init(DISCOVERY_AUDIO_I2Cx_SDA_GPIO_PORT, &GPIO_InitStructure);
    
    /*** Configure the I2C peripheral ***/
    /* Enable I2C clock */
    DISCOVERY_AUDIO_I2Cx_CLK_ENABLE();

    /* Force the I2C peripheral clock reset */
    //DISCOVERY_AUDIO_I2Cx_FORCE_RESET();

    /* Release the I2C peripheral clock reset */
    //DISCOVERY_AUDIO_I2Cx_RELEASE_RESET();

    /* Enable and set I2Cx Interrupt to a lower priority */
    NVIC_InitStructure.NVIC_IRQChannel = DISCOVERY_AUDIO_I2Cx_EV_IRQn;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0x05;
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0x00;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);

    /* Enable and set I2Cx Interrupt to a lower priority */
    NVIC_InitStructure.NVIC_IRQChannel = DISCOVERY_AUDIO_I2Cx_ER_IRQn;
    NVIC_Init(&NVIC_InitStructure);
  }
  else
  {
    /* External, camera and Arduino connector I2C MSP init */

    /*** Configure the GPIOs ***/
    /* Enable GPIO clock */
    DISCOVERY_EXT_I2Cx_SCL_SDA_GPIO_CLK_ENABLE();

    /* Connect PXx to I2C_SCL*/
    GPIO_PinAFConfig(DISCOVERY_EXT_I2Cx_SCL_GPIO_PORT,
                     DISCOVERY_EXT_I2Cx_SCL_PIN_SOURCE,
                     DISCOVERY_EXT_I2Cx_SCL_AF);
    
    /* Connect PXx to I2C_SDA*/
    GPIO_PinAFConfig(DISCOVERY_EXT_I2Cx_SDA_GPIO_PORT,
                     DISCOVERY_EXT_I2Cx_SDA_PIN_SOURCE,
                     DISCOVERY_EXT_I2Cx_SDA_AF);
    
    /* Configure I2C Tx as alternate function */
    GPIO_InitStructure.GPIO_Pin = DISCOVERY_EXT_I2Cx_SCL_PIN;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
    GPIO_InitStructure.GPIO_Speed = GPIO_Fast_Speed;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_OD;
    GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_NOPULL;
    GPIO_Init(DISCOVERY_EXT_I2Cx_SCL_GPIO_PORT, &GPIO_InitStructure);

    /* Configure I2C Rx as alternate function */
    GPIO_InitStructure.GPIO_Pin = DISCOVERY_EXT_I2Cx_SDA_PIN;
    GPIO_Init(DISCOVERY_EXT_I2Cx_SDA_GPIO_PORT, &GPIO_InitStructure);
    
    /*** Configure the I2C peripheral ***/
    /* Enable I2C clock */
    DISCOVERY_EXT_I2Cx_CLK_ENABLE();

    /* Force the I2C peripheral clock reset */
    //DISCOVERY_EXT_I2Cx_FORCE_RESET();

    /* Release the I2C peripheral clock reset */
    //DISCOVERY_EXT_I2Cx_RELEASE_RESET();
    
    /* Enable and set I2Cx Interrupt to a lower priority */
    NVIC_InitStructure.NVIC_IRQChannel = DISCOVERY_EXT_I2Cx_EV_IRQn;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0x05;
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0x00;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);

    /* Enable and set I2Cx Interrupt to a lower priority */
    NVIC_InitStructure.NVIC_IRQChannel = DISCOVERY_EXT_I2Cx_ER_IRQn;
    NVIC_Init(&NVIC_InitStructure);
  }
}

static void I2Cx_Init(I2C_TypeDef *i2c_handler)
{
  I2C_InitTypeDef I2C_InitStructure;
  I2C_TypeDef * I2Cx;
  
  if((i2c_handler->CR1 & I2C_CR1_PE) == 0)
  {
    if (i2c_handler == DISCOVERY_AUDIO_I2Cx)
    {
      /* Audio and LCD I2C configuration */
      I2Cx = DISCOVERY_AUDIO_I2Cx;
    }
    else
    {
      /* External, camera and Arduino connector  I2C configuration */
      I2Cx = DISCOVERY_EXT_I2Cx;
    }
    I2C_InitStructure.I2C_Timing = DISCOVERY_I2Cx_TIMING;
    I2C_InitStructure.I2C_AnalogFilter = I2C_AnalogFilter_Enable;
    I2C_InitStructure.I2C_DigitalFilter = 0x00;
    I2C_InitStructure.I2C_Mode = I2C_Mode_I2C;
    I2C_InitStructure.I2C_OwnAddress1 = 0x00;
    I2C_InitStructure.I2C_Ack = I2C_Ack_Enable;
    I2C_InitStructure.I2C_AcknowledgedAddress = I2C_AcknowledgedAddress_7bit;
    
    RCC_I2CClockSourceConfig(I2Cx, RCC_I2CCLKSource_APB);
    
    /* Init the I2C */
    I2Cx_MspInit(I2Cx);
    
    /* Initialize the I2C peripheral */
    I2C_Init(I2Cx, &I2C_InitStructure);
    
    /* Enable the I2C peripheral */
    I2C_Cmd(I2Cx, ENABLE);
  }
}

static ErrorStatus I2Cx_ReadMultiple(I2C_TypeDef *i2c_handler,
                                           uint8_t Addr,
                                           uint16_t Reg,
                                           uint16_t MemAddress,
                                           uint8_t *Buffer,
                                           uint16_t Length)
{
  ErrorStatus status = SUCCESS;

  status = I2Cx_Read(i2c_handler, Addr, (uint16_t)Reg, MemAddress, Buffer, Length, 1000);

  /* Check the communication status */
  if(status != SUCCESS)
  {
    /* I2C error occurred */
    I2Cx_Error(i2c_handler, Addr);
  }
  return status;
}

static ErrorStatus I2Cx_WriteMultiple(I2C_TypeDef *i2c_handler,
                                            uint8_t Addr,
                                            uint16_t Reg,
                                            uint16_t MemAddress,
                                            uint8_t *Buffer,
                                            uint16_t Length)
{
  ErrorStatus status = SUCCESS;
  
  status = I2Cx_Write(i2c_handler, Addr, (uint16_t)Reg, MemAddress, Buffer, Length, 1000);
  
  /* Check the communication status */
  if(status != SUCCESS)
  {
    /* Re-Initiaize the I2C Bus */
    I2Cx_Error(i2c_handler, Addr);
  }
  return status;
}

static ErrorStatus I2Cx_IsDeviceReady(I2C_TypeDef *i2c_handler, uint16_t DevAddress, uint32_t Trials)
{ 
  return (I2Cx_IsDeviceReadyTimeout(i2c_handler, DevAddress, Trials, 1000));
}

static void I2Cx_Error(I2C_TypeDef *i2c_handler, uint8_t Addr)
{
  /* De-initialize the I2C communication bus */
  I2C_DeInit(i2c_handler);
  
  /* Re-Initialize the I2C communication bus */
  I2Cx_Init(i2c_handler);
}

ErrorStatus EEPROM_IO_WriteData(uint16_t DevAddress, uint16_t MemAddress, uint8_t* pBuffer, uint32_t BufferSize)
{
  return (I2Cx_WriteMultiple(hI2cExtHandler, DevAddress, MemAddress, I2C_REGADDR_SIZE_16BIT, pBuffer, BufferSize));
}

ErrorStatus EEPROM_IO_ReadData(uint16_t DevAddress, uint16_t MemAddress, uint8_t* pBuffer, uint32_t BufferSize)
{
  return (I2Cx_ReadMultiple(hI2cExtHandler, DevAddress, MemAddress, I2C_REGADDR_SIZE_16BIT, pBuffer, BufferSize));
}
